Wersja ostatecznie ostateczna. Leci do druku. Poprawiony tytul...

--- a/thesis/thesis-bachelor-polski.tex
+++ b/thesis/thesis-bachelor-polski.tex
@@ -57,7 +57,7 @@
    Maciej Trojan \album{94378} \and 
    Krzysztof Urbaniak \album{94381} \and 
    Łukasz Wieczorek \album{94385}}
-\title{iQuest -- system rozszerzonych ankiet~studenckich}                   % Note how we protect the final title phrase from breaking
+\title{iQuest -- system rozszerzonej obsługi ankiet~studenckich}                   % Note how we protect the final title phrase from breaking
 \ppsupervisor{dr inż.~Bartosz Walter} % Your supervisor comes here.
 \ppyear{2013}                                         % Year of final submission (not graduation!)
 
