Wersja do druku z poprawionymi rozmiarami schematow. Leci do drukarni.

--- a/thesis/01Wprowadzenie.tex
+++ b/thesis/01Wprowadzenie.tex
@@ -51,7 +51,7 @@ Poważną przeszkodą jest niekompletność dokumentacji niektórych systemów i
 \subsection{Wpływ ograniczeń i zagrożeń na projekt}
 \label{Chapter123}
 
-Narzucona decyzja o~zastosowaniu konkretnych typów technologii (rozwiązania ,,wolne i~otwarte''), dokumentowanych nie~przez wyspecjalizowanych fachowców, lecz tzw.~,,społęczność'' (ang.~\definicja{community}), wymusiła konieczność oparcia wielu działań na~metodzie ,,prób i~błędów'', co~znacząco wpłynęło na~czas realizacji zadań poszczególnych członków zespołu projektowego.
+Narzucona decyzja o~zastosowaniu konkretnych typów technologii (rozwiązania ,,wolne i~otwarte''), dokumentowanych nie~przez wyspecjalizowanych fachowców, lecz tzw.~,,społęczność'' (ang.~\definicja{community}), wymusiła konieczność oparcia wielu działań na~metodzie ,,prób i~błędów'', co~znacząco wpłynęło na~czas realizacji zadań poszczególnych członków zespołu projektowego. \\
 
 Wspomniana w~poprzedniej sekcji (\ref{Chapter122}. -- Zagrożenia) kwestia zmieniających~się wymagań i~specyfikacji sprawiła jednak najwięcej problemów. Niejednokrotnie zdarzały~się sytuacje, kiedy prace projektowe były już w~zaawansowanym stadium, a~nowe wytyczne powodowały konieczność rozpoczynania pracy od~podstaw. Było~to główną przyczyną powstawania opóźnień w~realizacji projektu.
 
