--- a/thesis/05Architektura.tex
+++ b/thesis/05Architektura.tex
@@ -80,12 +80,12 @@ Rozpatrując powyższe tabele z~perspektywy czasu, autorzy niniejszej pracy stwi
 \subsection{Perspektywa fizyczna}
 \label{Chapter541}
 
+Schemat \ref{rys:PerspektywaFizyczna} prezentuje perspektywę fizyczną projektu. Widać na~nim dokładnie, opisaną wcześniej, opartą na~rozszerzeniach dla~platformy \textit{Moodle} budowę logiki systemu \textit{iQuest}. Za~jej pośrednictwem dokonuje~się połączeń z~serwerem baz~danych oraz~serwerem raportowania. Użytkownik systemu, z~wykorzystaniem przeglądarki internetowej, komunikuje~się z~platformą, lub~systemem raportowania, korzystając przy~tym z~warstwy prezentacji.
+
 \begin{figure}[H]
 \centering\includegraphics[width=0.9\textwidth]{figures/PhysicalView}
 \caption{Diagram perspektywy fizycznej (wyk. zespół zarządzający)}\label{rys:PerspektywaFizyczna}
 \end{figure}
-
-Schemat \ref{rys:PerspektywaFizyczna} prezentuje perspektywę fizyczną projektu. Widać na~nim dokładnie, opisaną wcześniej, opartą na~rozszerzeniach dla~platformy \textit{Moodle} budowę logiki systemu \textit{iQuest}. Za~jej pośrednictwem dokonuje~się połączeń z~serwerem baz~danych oraz~serwerem raportowania. Użytkownik systemu, z~wykorzystaniem przeglądarki internetowej, komunikuje~się z~platformą, lub~systemem raportowania, korzystając przy~tym z~warstwy prezentacji.
 
 \subsection{Perspektywa logiczna}
 \label{Chapter542}
@@ -131,14 +131,10 @@ Dzięki temu komponentowi możliwe jest~szeregowanie oraz~wykonywanie zadań w~t
 
 Diagram perspektywy implementacyjnej (zwanej też~perspektywą warstw; rys.~\ref{rys:PerspektywaImplementacyjna}) przedstawia graficzną interpretację zależności między poszczególnymi elementami systemu \textit{iQuest} w~nawiązaniu do~warstw zastosowanego modelu trójwarstwowego. Funkcje zaprezentowanych na~nim modułów zostały wyjaśnione już~wcześniej w niniejszym rozdziale.
 
-\newpage
-\begin{landscape}
 \begin{figure}[H]
-\centering\includegraphics[width=0.9\textwidth]{figures/Layers}
+\centering\includegraphics[angle=90,height=\textheight]{figures/Layers}
 \caption{Diagram perspektywy implementacyjnej (wyk. zespół zarządzający)}\label{rys:PerspektywaImplementacyjna}
 \end{figure}
-\end{landscape}
-\newpage
 
 \section{Decyzje projektowe}
 \label{Chapter55}
@@ -945,9 +941,7 @@ Uzasadnienie & Jest bardzo mała szansa, że na Uczelni pojawi się potrzeba prz
 Ze względu na obszerność, schemat bazy danych przedstawiono na~następnej stronie.
 
 \newpage
-\begin{landscape}
 \begin{figure}[th]
-\centering\includegraphics[height=\textheight, width=1.5\textwidth]{figures/iQuest_Database}
+\centering\includegraphics[angle=90,height=1.3\textwidth]{figures/iQuest_Database}
 \caption{Diagram Bazy Danych (wyk. zespół zarządzający)}\label{rys:iQuest_DataBase}
 \end{figure}
-\end{landscape}
