Wersja do druku z poprawionymi rozmiarami schematow. Leci do drukarni.

--- a/thesis/07Jakosc.tex
+++ b/thesis/07Jakosc.tex
@@ -138,7 +138,8 @@ Krok & \textbf{Dane} \\ \hline
 \matbegin{TC4}{Wybranie grupy docelowej}
 \matpres
 \matpre{Zalogowany użytkownik z prawami do tworzenia ankiet}
-\matpre{Użytkownik posiada prawa do ankiety ,,Ankieta Testowa'' oraz badania ,,Badanie Testowe''}
+\matpre{Użytkownik posiada prawa do ankiety ,,Ankieta Testowa''}
+\matpre{Użytkownik posiada prawa do badania ,,Badanie Testowe''}
 \matpre{Użytkownik posiada prawo do ankietowania grupy docelowej ,,test''}
 \matsteps
 \matstep{1}{Użytkownik wybiera przycisk ,,Włącz tryb edycji''}{Interfejs edycji \textit{Moodle}}
